# ChangeLog for app-text/gnome-doc-utils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.137 2009/04/28 11:10:45 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  sh stable

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  arm stable

*gnome-doc-utils-0.16.1 (19 Apr 2009)

  19 Apr 2009; Mart Raudsepp <leio@gentoo.org>
  +files/gnome-doc-utils-0.16.1-fhs.patch, -gnome-doc-utils-0.14.1.ebuild,
  +gnome-doc-utils-0.16.1.ebuild:
  Version bump - uses python hashlib module instead of md5 module if
  available, as the latter is deprecated. Translation updates.
  Do patching in src_prepare as appropriate with EAPI 2.

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  Marked stable on amd64

  07 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org>
  gnome-doc-utils-0.12.2-r1.ebuild, gnome-doc-utils-0.14.1.ebuild:
  Transition to eapi 2 use deps

  06 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  Marking gnome-doc-utils-0.14.2 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  Marking gnome-doc-utils-0.14.2 ppc64 stable for bug 260063

  19 Feb 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-doc-utils-0.14.2.ebuild:
  Move gnome-doc-utils to EAPI 2; bug #253888

  26 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-doc-utils-0.12.2-r1.ebuild, gnome-doc-utils-0.14.2.ebuild:
  dev-libs/glib is needed for eautofoo, bug #255114.
