@@ -4,8 +4,8 @@ AUX gnome-doc-utils-0.16.1-fhs.patch 3080 RMD160 8bbcfa8012bd6999bdca8a769a36193
 DIST gnome-doc-utils-0.12.2.tar.bz2 595150 RMD160 79f204f78edbe44c5cb171630967309d5ede5afa SHA1 8006f6c2c3cf41c6be0295b4ba48df0d4d4f51d1 SHA256 8abda2b30ecccb3aedc9f465b667787b4fca9ae80b18e3292901c57ffc484747
 DIST gnome-doc-utils-0.14.2.tar.bz2 619515 RMD160 9e8df6a678179740a9a19c5f223e2773aea0a468 SHA1 f94608cb8b16b6246305e5cab1905a42e82827c8 SHA256 0a1ebce8b5cdee44addde6f95625aa6bd5bfe6c8014485e8ec505c686fab1f7f
 DIST gnome-doc-utils-0.16.1.tar.bz2 626475 RMD160 6a588c1cc4748a0ab8d2cf1db456ee3b085a7974 SHA1 b2f8623de2d0989ad2b6b8147cd8dba62895faa9 SHA256 73e0c7f06efcc42b3b3c353dd5d4c19f178119505bcbb554312be6862616e248
-EBUILD gnome-doc-utils-0.12.2-r1.ebuild 1276 RMD160 bf9b9c9a7284c566761ac5e1a14aa916f816f4b9 SHA1 b21912e15a2c20abc4531e9317c9af7d365def77 SHA256 858020d7dc1f5cc3d700cbb009be8fcf18a9c9d3b3f1e07a38755fd10cde1397
+EBUILD gnome-doc-utils-0.12.2-r1.ebuild 1270 RMD160 b6d1867108f86ef5ce568454dcecf4505fe061ad SHA1 2bf0f466d003da35a4c86771ca2c44548232dcf9 SHA256 e5e3252f6f6a514ffffa98b4a16edc1c0199724b855e44bc6bace470568c9143
 EBUILD gnome-doc-utils-0.14.2.ebuild 1348 RMD160 751490bca0bfc3ef6236bbd5667c34fb4d049eef SHA1 7a4c16c3ea3b7ba813b50ab7eed52702337e5638 SHA256 c9078e7b17cff6713974d3001d41a8a047d72bb7d05e9d846c00c262ba0b1eeb
-EBUILD gnome-doc-utils-0.16.1.ebuild 1356 RMD160 994e32452864be051bc3d40c34e94a8b27560052 SHA1 208ff23fdd4027b47f914d995fe5fd3ce85331a3 SHA256 2da111ed61e4cf3b90877e695f420af05470b8fe65e4cf327984aba1a33ac20b
-MISC ChangeLog 18310 RMD160 56e72a9861d53c0220804b9bec899d7dd286e08f SHA1 751ce56bc30861bd05a30a374f7810ac25692c69 SHA256 140e753044ff6195a9fc09bd3d3a044a03ccd387b9117d41b3b3c8ba2de94432
+EBUILD gnome-doc-utils-0.16.1.ebuild 1356 RMD160 1b3303c3e0f96bc527dd01d84faf6a17ba86a237 SHA1 e8a5410de71fba3af73cad169289c64c006ec738 SHA256 f140aabf3d7afdccefc6471bafb3e5e58b22e880681b41561653ddb4c208f4a9
+MISC ChangeLog 18701 RMD160 ceaf51ea43f60c3bd69cd70b5b8ddafac470810d SHA1 f4199c8e9216e5a91ab3359947c4e579336a65bc SHA256 36332a7f750e1d2a6f6f0e59203c9f8f46598d037b48f315d9d3591badf8df66
 MISC metadata.xml 180 RMD160 d5c2834323dbbb0fe95852a38d96f612f4fa5272 SHA1 ec8a7e682c2f7e2ac91ac2cb0c9a534e26a9a211 SHA256 7e56e5abb3b36de1c42bbb9e6b415baf540373a30426cabe655b4458bd864823
