@@ -1,10 +1,10 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/gnome-doc-utils-0.16.1.ebuild,v 1.1 2009/04/19 03:19:51 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/gnome-doc-utils-0.16.1.ebuild,v 1.3 2009/05/02 21:10:35 eva Exp $
 
-EAPI=2
+EAPI="2"
 
-inherit eutils multilib python gnome2
+inherit eutils python gnome2
 
 DESCRIPTION="A collection of documentation utilities for the Gnome project"
 HOMEPAGE="http://www.gnome.org/"
@@ -34,7 +34,7 @@ src_prepare() {
 	gnome2_src_prepare
 
 	# Make xml2po FHS compliant, bug #190798
-	epatch "${FILESDIR}/${P}-fhs.patch"
+	epatch "${FILESDIR}/${PN}-0.16.1-fhs.patch"
 
 	# If there is a need to reintroduce eautomake or eautoreconf, make sure
 	# to AT_M4DIR="tools m4", bug #224609 (m4 removes glib build time dep)
